--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -9,6 +9,11 @@ header {
   color: aliceblue;
   margin-right: auto;
   margin-left: 50px;
+  cursor: pointer;
+}
+
+.title:hover {
+  opacity: 0.5;
 }
 
 .menu {
